2010-05-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Use the new framework for `-b seqc'.

	* tools/bin/cce.in: Expand `seqc' to
	`spr+seq-host-host-seqc'. Remove support for two-word aliases.

	* build-aux/slctests.mk: Do not test extra for
	`spr+seq-host-host-seqc', since this is now the default.

2010-05-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve MT-Alpha code gen.

	The previous fix to protect "end" after a branch is not needed any
	more as the underlying hardware now ignores the end if the branch
	is taken. However we need to protect it for branches that may
	return, since the return goes to the following instruction which
	then must end the hread.

	* tools/lib/slc/mtalpha/asmproc/opt.py (protectend): Avoid
	inserting `nop' between normal branch and `end', only bsr and
	equivalent.

2010-05-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the math library.

	The math library needed to be recompiled; also the implementation
	of tgamma() was blatantly incorrect. It needs to compute the Gamma
	function, and was implemented as an alias to lgamma() instead.

	* lib/src/mtalpha/m/acosf.o,
	* lib/src/mtalpha/m/acoshf.o,
	* lib/src/mtalpha/m/asinf.o,
	* lib/src/mtalpha/m/asinhf.o,
	* lib/src/mtalpha/m/atan2f.o,
	* lib/src/mtalpha/m/atanf.o,
	* lib/src/mtalpha/m/atanhf.o,
	* lib/src/mtalpha/m/cabsf.o,
	* lib/src/mtalpha/m/carg.o,
	* lib/src/mtalpha/m/cargf.o,
	* lib/src/mtalpha/m/cbrtf.o,
	* lib/src/mtalpha/m/ceilf.o,
	* lib/src/mtalpha/m/copysignf.o,
	* lib/src/mtalpha/m/cosf.o,
	* lib/src/mtalpha/m/coshf.o,
	* lib/src/mtalpha/m/e_acos.o,
	* lib/src/mtalpha/m/e_acosh.o,
	* lib/src/mtalpha/m/e_asin.o,
	* lib/src/mtalpha/m/e_atan2.o,
	* lib/src/mtalpha/m/e_atanh.o,
	* lib/src/mtalpha/m/e_cosh.o,
	* lib/src/mtalpha/m/e_exp.o,
	* lib/src/mtalpha/m/e_fmod.o,
	* lib/src/mtalpha/m/e_gamma.o,
	* lib/src/mtalpha/m/e_gamma_r.o,
	* lib/src/mtalpha/m/e_hypot.o,
	* lib/src/mtalpha/m/e_j0.o,
	* lib/src/mtalpha/m/e_j1.o,
	* lib/src/mtalpha/m/e_jn.o,